--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -9,4 +9,10 @@
     <!-- main -->
     <string name="setting">설정</string>
     <string name="clear">뒤로 가기</string>
+
+    <!-- setting -->
+    <string name="call">전화</string>
+    <string name="door">출입</string>
+    <string name="account">계정</string>
+    <string name="logout">로그아웃</string>
 </resources>
