--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -14,5 +14,9 @@
     <string name="call">전화</string>
     <string name="door">출입</string>
     <string name="account">계정</string>
+    <string name="sw_voice">음성 활성화</string>
+    <string name="sw_popup">팝업 활성화</string>
+    <string name="sw_door">가게 출입 알람</string>
+    <string name="warning">※ 일부 계정만 사용 가능한 기능입니다.</string>
     <string name="logout">로그아웃</string>
 </resources>
